--- a/anime/dragon-ball.html
+++ b/anime/dragon-ball.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dragon Ball Movie</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://player.vimeo.com/api/player.js"></script>
 </head>
 <body class="bg-black text-white font-mono">
   <div class="p-6">
@@ -15,11 +14,11 @@
 
     <!-- Video Player -->
     <div class="mb-4">
-      <iframe id="videoPlayer" src="https://player.vimeo.com/video/1078621375" width="100%" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="rounded shadow"></iframe>
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1CCs06Ok3qo6k9B-SmgCeJS5950ZsUOot/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Super Dragon Ball Heroes: The Movie</h2>
-        <p id="episodeDesc" class="text-gray-400">The ultimate battle begins.</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2023-08-10</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">Dragon Ball Movie - Google Drive</h2>
+        <p id="episodeDesc" class="text-gray-400">Dragon Ball full movie hosted on Google Drive.</p>
+        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
 
@@ -32,10 +31,10 @@
   <script>
     const episodes = [
       {
-        title: "Super Dragon Ball Heroes: The Movie",
-        link: "https://player.vimeo.com/video/1078621375",
-        description: "The ultimate battle begins.",
-        uploadDate: "2023-08-10"
+        title: "Dragon Ball Movie - Google Drive",
+        link: "https://drive.google.com/file/d/1CCs06Ok3qo6k9B-SmgCeJS5950ZsUOot/preview",
+        description: "Dragon Ball full movie hosted on Google Drive.",
+        uploadDate: "2025-04-25"
       },
       // You can add more episodes here
     ];
