--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-900 text-white font-sans">
   <!-- Header -->
   <header class="flex items-center justify-between p-4 bg-gray-800 shadow-md">
-    <img src="assets/logo.png" alt="Lazy Kuma Logo" class="w-12 h-12" />
+    <img src="unnamed.png" alt="Lazy Kuma Logo" class="w-12 h-12" />
     <input type="text" id="search" placeholder="Search anime..." class="w-1/2 p-2 rounded bg-gray-700 text-white placeholder-gray-400" oninput="filterAnime()" />
     <select id="themeSelect" class="bg-gray-700 text-white rounded p-2">
       <option value="default">Anime</option>
