--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     const animeData = {
       "dragon-ball": {
         title: "Dragon Ball Movie",
-        cover: "https://via.placeholder.com/300x150",
+        cover: "anime-super-dragon-ball-heroes-goku-ultra-instinct-dragon-ball-hd-wallpaper-preview.jpg/300x150",
         link: "anime/dragon-ball.html"
       },
       // You can add more anime objects here
