--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kenovo Anime Dashboard</title>
+  <title>Anime Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="assets/logo.png" />
 </head>
@@ -22,7 +22,7 @@
 
   <!-- Carousel -->
   <section class="overflow-x-auto whitespace-nowrap p-4 space-x-4">
-    <div class="inline-block w-64 h-40 bg-pink-600 rounded shadow-md text-center align-top">Cover 1</div>
+    <div class="anime-super-dragon-ball-heroes-goku-ultra-instinct-dragon-ball-hd-wallpaper-preview.jpg">Cover 1</div>
     <div class="inline-block w-64 h-40 bg-purple-600 rounded shadow-md text-center align-top">Cover 2</div>
     <div class="inline-block w-64 h-40 bg-blue-600 rounded shadow-md text-center align-top">Cover 3</div>
     <!-- Add more covers dynamically later -->
