--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       },
       {
         title: "Cover 2",
-        image: "path-to-your-image2.jpg", // Replace with your image path
+        image: "5b34eb4fda1204ae7ffbf5166f03889880d9907db82f1defeb2c146bcef097d0.jpg", // Replace with your image path
       },
       {
         title: "Cover 3",
