--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       },
       {
         title: "Cover 3",
-        image: "path-to-your-image3.jpg", // Replace with your image path
+        image: "download.jpg", // Replace with your image path
       },
     ];
 
