--- a/anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html
+++ b/anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html
@@ -1,1 +1,62 @@
+<!-- anime/dragon-ball.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shinchan The Legend of Ninja Mononoke (Hindi)</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-black text-white font-mono">
+  <div class="p-6">
+    <h1 class="text-4xl font-bold text-pink-600">Shinchan The Legend of Ninja Mononoke (Hindi)</h1>
+    <p class="text-gray-400 mb-6">Shinchan The Legend of Ninja Mononoke (Hindi)</p>
 
+    <!-- Video Player -->
+    <div class="mb-4">
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1AS3NjcmQdBkalfSxzBZfXq5Y80lUCReg/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
+      <div class="mt-2">
+        <h2 id="episodeTitle" class="text-xl font-semibold">Shinchan The Legend of Ninja Mononoke (Hindi)</h2>
+        <p id="episodeDesc" class="text-gray-400">Shinchan The Legend of Ninja Mononoke (Hindi) full movie hosted on Google Drive.</p>
+        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
+      </div>
+    </div>
+
+    <!-- Episode List -->
+    <div id="episodeList" class="space-y-3">
+      <!-- Populated by JS -->
+    </div>
+  </div>
+
+  <script>
+    const episodes = [
+      {
+        title: "Shinchan The Legend of Ninja Mononoke (Hindi)",
+        link: "https://drive.google.com/file/d/1AS3NjcmQdBkalfSxzBZfXq5Y80lUCReg/preview",
+        description: "Shinchan The Legend of Ninja Mononoke (Hindi)",
+        uploadDate: "2025-04-25"
+      },
+      // You can add more episodes here
+    ];
+
+    const list = document.getElementById('episodeList');
+    const player = document.getElementById('videoPlayer');
+    const title = document.getElementById('episodeTitle');
+    const desc = document.getElementById('episodeDesc');
+    const date = document.getElementById('uploadDate');
+
+    episodes.forEach((ep, idx) => {
+      const btn = document.createElement('button');
+      btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
+      btn.innerText = ep.title;
+      btn.onclick = () => {
+        player.src = ep.link;
+        title.innerText = ep.title;
+        desc.innerText = ep.description;
+        date.innerText = "Uploaded: " + ep.uploadDate;
+      };
+      list.appendChild(btn);
+    });
+  </script>
+</body>
+</html>
