--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
       },
       // You can add more anime objects here
     };
-
+ // Define anime data
+    const animeData = {
+      "Shinchan The Legend of Ninja Mononoke (Hindi)": {
+        title: "Shinchan The Legend of Ninja Mononoke (Hindi)",
+        cover: "anime-super-dragon-ball-heroes-goku-ultra-instinct-dragon-ball-hd-wallpaper-preview.jpg",
+        link: "anime/dragon-ball.html"
+      },
     // Function to load anime cards
     function loadAnimeCards() {
       const container = document.getElementById('animeList');
