--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     const animeData = {
       "Shinchan The Legend of Ninja Mononoke (Hindi)": {
         title: "Shinchan The Legend of Ninja Mononoke (Hindi)",
-        cover: "anime-super-dragon-ball-heroes-goku-ultra-instinct-dragon-ball-hd-wallpaper-preview.jpg",
-        link: "anime/dragon-ball.html"
+        cover: "download.jpg",
+        link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"
       },
     // Function to load anime cards
     function loadAnimeCards() {
