--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       },
       {
         title: "Cover 2",
-        image: "5b34eb4fda1204ae7ffbf5166f03889880d9907db82f1defeb2c146bcef097d0.jpg", // Replace with your image path
+        image: "WIND BREAKER S2.jpg", // Replace with your image path
       },
       {
         title: "Cover 3",
@@ -81,6 +81,10 @@
         cover: "download.jpg",
         link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"
       },
+       "WIND BREAKER Season 2 in hindi": {
+        title: "WIND BREAKER S02E01 1080",
+        cover: "WIND BREAKER S2.jpg",
+        link: ""
       // You can add more anime objects here
     };
 
