--- a/anime/WIND BREAKER S2.html
+++ b/anime/WIND BREAKER S2.html
@@ -5,20 +5,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dragon Ball Movie</title>
+  <title>wind breaker season 2</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-black text-white font-mono">
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Dragon Ball Movie</h1>
-    <p class="text-gray-400 mb-6">All episodes of the Dragon Ball Movie</p>
+    <h1 class="text-4xl font-bold text-pink-600">wind breaker season 2</h1>
+    <p class="text-gray-400 mb-6">All episodes of the wind breaker season 2</p>
 
     <!-- Video Player -->
     <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1CCs06Ok3qo6k9B-SmgCeJS5950ZsUOot/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1orL4D-jrd6_RxfgpXrIrEM8xkRDvNlQP//preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Dragon Ball Movie - Google Drive</h2>
-        <p id="episodeDesc" class="text-gray-400">Dragon Ball full movie hosted on Google Drive.</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">wind breaker season 2</h2>
+        <p id="episodeDesc" class="text-gray-400">wind breaker season 2 ep 1.</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -32,9 +32,9 @@
   <script>
     const episodes = [
       {
-        title: "Dragon Ball Movie - Google Drive",
-        link: "https://drive.google.com/file/d/1CCs06Ok3qo6k9B-SmgCeJS5950ZsUOot/preview",
-        description: "Dragon Ball full movie hosted on Google Drive.",
+        title: "wind breaker season 2",
+        link: "https://drive.google.com/file/d/1orL4D-jrd6_RxfgpXrIrEM8xkRDvNlQP//preview",
+        description: "wind breaker season 2 ep 1",
         uploadDate: "2025-04-25"
       },
       // You can add more episodes here
