--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
        "WIND BREAKER Season 2 in hindi": {
         title: "WIND BREAKER S02E01 1080",
         cover: "WIND BREAKER S2.jpg",
-        link: ""
+        link: "anime/WIND BREAKER S2.html"
       // You can add more anime objects here
     };
 
