--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         cover: "download.jpg",
         link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"
       },
-       "WIND BREAKER Season 2 in hindi": {
+      "WIND BREAKER Season 2 in hindi": {
         title: "WIND BREAKER S02E01 1080",
         cover: "WIND BREAKER S2.jpg",
         link: "anime/WIND BREAKER S2.html"
-      // You can add more anime objects here
+      } // <-- Missing closing brace added here
     };
 
     // Function to load anime cards
