--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
     const carouselData = [
       {
         title: "Cover 1",
-        image: "anime-super-dragon-ball-heroes-goku-ultra-instinct-dragon-ball-hd-wallpaper-preview.jpg", // Replace with your image path
+        image: "unnamed (3).jpg", // Replace with your image path
       },
       {
         title: "Cover 2",
-        image: "WIND BREAKER S2.jpg", // Replace with your image path
+        image: "unnamed (2).jpg", // Replace with your image path
       },
       {
         title: "Cover 3",
-        image: "download.jpg", // Replace with your image path
+        image: "unnamed (4).jpg", // Replace with your image path
+      },
+      {
+        title: "Cover 3",
+        image: "unnamed (1).jpg", // Replace with your image path
       },
     ];
 
@@ -85,7 +89,12 @@
         title: "WIND BREAKER S02E01 1080",
         cover: "WIND BREAKER S2.jpg",
         link: "anime/WIND BREAKER S2.html"
-      } // <-- Missing closing brace added here
+      }, 
+      "Tokyo Revengers season 1": {
+        title: "Tokyo Revengers season 1",
+        cover: "unnamed (2).jpg",
+        link: "anime/Tokyo Revengers season 1.html"
+      } // <-- Missin// <-- Missing closing brace added here
     };
 
     // Function to load anime cards
