--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       },
       "Shinchan The Legend of Ninja Mononoke (Hindi)": {
         title: "Shinchan The Legend of Ninja Mononoke (Hindi)",
-        cover: "download.jpg",
+        cover: "unnamed (1).jpg",
         link: "anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html"
       },
       "WIND BREAKER Season 2 in hindi": {
