--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     // Define anime data
     const animeData = {
       "dragon-ball": {
-        title: "Dragon Ball Movie",
-        cover: "anime-super-dragon-ball-heroes-goku-ultra-instinct-dragon-ball-hd-wallpaper-preview.jpg",
+        title: "Dragon Ball prison planet full Movie",
+        cover: "unnamed (4).jpg",
         link: "anime/dragon-ball.html"
       },
       "Shinchan The Legend of Ninja Mononoke (Hindi)": {
