--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <title>Anime Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="assets/logo.png" />
+  <style>
+    #adBox {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #374151;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+      z-index: 1000;
+      cursor: move;
+      transition: opacity 0.5s ease;
+    }
+    #adBox.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+  </style>
 </head>
 <body class="bg-gray-900 text-white font-sans">
   <!-- Header -->
@@ -30,50 +48,21 @@
   </main>
 
   <!-- Ad Box -->
-  <div class="fixed bottom-4 right-4 bg-gray-700 p-4 rounded shadow-md text-sm text-white">
-    Ad: Watch new anime trailers!
+  <div id="adBox" onmouseenter="showAdBox()" onmouseleave="startAutoHide()">
+    <div id="adContent">
+      <!-- Ads will rotate here -->
+    </div>
   </div>
 
   <script>
-    // Define images and links for the carousel covers
+    // --- Anime content setup ---
     const carouselData = [
-      {
-        title: "Cover 1",
-        image: "unnamed (3).jpg", // Replace with your image path
-      },
-      {
-        title: "Cover 2",
-        image: "unnamed (2).jpg", // Replace with your image path
-      },
-      {
-        title: "Cover 3",
-        image: "unnamed (4).jpg", // Replace with your image path
-      },
-      {
-        title: "Cover 3",
-        image: "unnamed (1).jpg", // Replace with your image path
-      },
+      { title: "Cover 1", image: "unnamed (3).jpg" },
+      { title: "Cover 2", image: "unnamed (2).jpg" },
+      { title: "Cover 3", image: "unnamed (4).jpg" },
+      { title: "Cover 4", image: "unnamed (1).jpg" },
     ];
 
-    // Function to load carousel items
-    function loadCarousel() {
-      const carousel = document.getElementById('carousel');
-      carousel.innerHTML = ''; // Clear existing items
-      carouselData.forEach(item => {
-        const coverDiv = document.createElement('div');
-        coverDiv.className = "inline-block w-64 h-40 bg-purple-600 rounded shadow-md text-center align-top";
-        
-        coverDiv.innerHTML = `
-          <div class="w-full h-full flex justify-center items-center">
-            <img src="${item.image}" alt="${item.title}" class="w-full h-full object-cover rounded" />
-          </div>
-        `;
-        
-        carousel.appendChild(coverDiv);
-      });
-    }
-
-    // Define anime data
     const animeData = {
       "dragon-ball": {
         title: "Dragon Ball prison planet full Movie",
@@ -89,31 +78,37 @@
         title: "WIND BREAKER S02E01 1080",
         cover: "WIND BREAKER S2.jpg",
         link: "anime/WIND BREAKER S2.html"
-      }, 
+      },
       "Tokyo Revengers season 1": {
         title: "Tokyo Revengers season 1",
         cover: "unnamed (2).jpg",
         link: "anime/Tokyo Revengers season 1.html"
-      } // <-- Missin// <-- Missing closing brace added here
+      }
     };
 
-    // Function to load anime cards
+    function loadCarousel() {
+      const carousel = document.getElementById('carousel');
+      carousel.innerHTML = '';
+      carouselData.forEach(item => {
+        const coverDiv = document.createElement('div');
+        coverDiv.className = "inline-block w-64 h-40 bg-purple-600 rounded shadow-md text-center align-top";
+        coverDiv.innerHTML = `<div class="w-full h-full flex justify-center items-center"><img src="${item.image}" alt="${item.title}" class="w-full h-full object-cover rounded" /></div>`;
+        carousel.appendChild(coverDiv);
+      });
+    }
+
     function loadAnimeCards() {
       const container = document.getElementById('animeList');
-      container.innerHTML = ''; // Clear existing cards
-      for (const [key, anime] of Object.entries(animeData)) {
+      container.innerHTML = '';
+      for (const anime of Object.values(animeData)) {
         const card = document.createElement('a');
         card.href = anime.link;
         card.className = "bg-gray-800 rounded-lg shadow hover:shadow-lg p-4 block transition hover:bg-gray-700";
-        card.innerHTML = `
-          <img src="${anime.cover}" alt="${anime.title}" class="w-full h-40 object-cover rounded mb-2">
-          <h2 class="text-xl font-bold text-center">${anime.title}</h2>
-        `;
+        card.innerHTML = `<img src="${anime.cover}" alt="${anime.title}" class="w-full h-40 object-cover rounded mb-2"><h2 class="text-xl font-bold text-center">${anime.title}</h2>`;
         container.appendChild(card);
       }
     }
 
-    // Function to filter anime cards based on search
     function filterAnime() {
       const search = document.getElementById('search').value.toLowerCase();
       const allCards = document.querySelectorAll('#animeList a');
@@ -123,7 +118,73 @@
       });
     }
 
-    // Initial load
+    // --- Ads Setup ---
+    const adSlots = [
+      `<iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="468" height="60" frameborder="0" scrolling="no"></iframe>`,
+      `<script type="text/javascript">
+        atOptions = {
+          'key': '38c97041ba09133421880a5339a162a8',
+          'format': 'iframe',
+          'height': 60,
+          'width': 468,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>`
+    ];
+
+    let currentAd = 0;
+    function rotateAds() {
+      const adBox = document.getElementById('adContent');
+      adBox.innerHTML = adSlots[currentAd];
+      currentAd = (currentAd + 1) % adSlots.length;
+    }
+
+    setInterval(rotateAds, 10000); // rotate every 10 seconds
+    rotateAds(); // initial load
+
+    // --- Auto Hide ---
+    let hideTimeout;
+    function startAutoHide() {
+      clearTimeout(hideTimeout);
+      hideTimeout = setTimeout(() => {
+        document.getElementById('adBox').classList.add('hidden');
+      }, 30000); // 30 sec
+    }
+
+    function showAdBox() {
+      clearTimeout(hideTimeout);
+      document.getElementById('adBox').classList.remove('hidden');
+    }
+
+    startAutoHide();
+
+    // --- Dragging Logic ---
+    const adBox = document.getElementById('adBox');
+    let offsetX, offsetY, isDragging = false;
+
+    adBox.addEventListener('mousedown', (e) => {
+      isDragging = true;
+      offsetX = e.clientX - adBox.offsetLeft;
+      offsetY = e.clientY - adBox.offsetTop;
+      document.body.style.userSelect = 'none';
+    });
+
+    document.addEventListener('mousemove', (e) => {
+      if (isDragging) {
+        adBox.style.left = e.clientX - offsetX + 'px';
+        adBox.style.top = e.clientY - offsetY + 'px';
+        adBox.style.bottom = 'auto';
+        adBox.style.right = 'auto';
+      }
+    });
+
+    document.addEventListener('mouseup', () => {
+      isDragging = false;
+      document.body.style.userSelect = 'auto';
+    });
+
+    // Initial content load
     loadCarousel();
     loadAnimeCards();
   </script>
