--- a/anime/WIND BREAKER S2.html
+++ b/anime/WIND BREAKER S2.html
@@ -1,24 +1,57 @@
-
-<!-- anime/dragon-ball.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>wind breaker season 2</title>
+  <title>Wind Breaker Season 2</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Ad box styles */
+    #adBox {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 90vw;
+      max-width: 728px;
+      background-color: #374151;
+      padding: 12px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+      z-index: 1000;
+      cursor: move;
+      transition: opacity 0.5s ease;
+    }
+    #adBox.hidden { opacity: 0; pointer-events: none; }
+    .ad-slot { display: none; }
+    .ad-slot.active { display: block; }
+    #closeAd {
+      position: absolute;
+      top: 6px;
+      right: 8px;
+      background: transparent;
+      border: none;
+      color: white;
+      font-size: 1.25rem;
+      line-height: 1;
+      cursor: pointer;
+    }
+    @media (max-width: 640px) {
+      #adBox { bottom: 1rem; right: 1rem; }
+    }
+  </style>
 </head>
 <body class="bg-black text-white font-mono">
+
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">wind breaker season 2</h1>
-    <p class="text-gray-400 mb-6">All episodes of the wind breaker season 2</p>
+    <h1 class="text-4xl font-bold text-pink-600">Wind Breaker Season 2</h1>
+    <p class="text-gray-400 mb-6">All episodes of the Wind Breaker Season 2</p>
 
     <!-- Video Player -->
     <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1orL4D-jrd6_RxfgpXrIrEM8xkRDvNlQP//preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1orL4D-jrd6_RxfgpXrIrEM8xkRDvNlQP/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">wind breaker season 2</h2>
-        <p id="episodeDesc" class="text-gray-400">wind breaker season 2 ep 1.</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">Wind Breaker Season 2</h2>
+        <p id="episodeDesc" class="text-gray-400">Wind Breaker Season 2 Ep 1</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -29,14 +62,45 @@
     </div>
   </div>
 
+  <!-- Ad Box -->
+  <div id="adBox" onmouseenter="showAdBox()" onmouseleave="startAutoHide()">
+    <button id="closeAd" aria-label="Close ad">×</button>
+    <div class="ad-slot active" id="ad1">
+      <iframe
+        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
+        width="100%"
+        height="90"
+        frameborder="0"
+        scrolling="no"
+        allowfullscreen>
+      </iframe>
+    </div>
+    <div class="ad-slot" id="ad2">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '38c97041ba09133421880a5339a162a8',
+          'format': 'iframe',
+          'height': 90,
+          'width': 728,
+          'params': {}
+        };
+      </script>
+      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+    </div>
+  </div>
+
   <script>
+    // --- Remove "leave site?" prompts ---
+    window.onbeforeunload = null;
+
+    // --- Episodes loading ---
     const episodes = [
       {
-        title: "wind breaker season 2",
-        link: "https://drive.google.com/file/d/1orL4D-jrd6_RxfgpXrIrEM8xkRDvNlQP//preview",
-        description: "wind breaker season 2 ep 1",
+        title: "Wind Breaker Season 2",
+        link: "https://drive.google.com/file/d/1orL4D-jrd6_RxfgpXrIrEM8xkRDvNlQP/preview",
+        description: "Wind Breaker Season 2 Ep 1",
         uploadDate: "2025-04-25"
-      },
+      }
       // You can add more episodes here
     ];
 
@@ -58,6 +122,57 @@
       };
       list.appendChild(btn);
     });
+
+    // --- Ads rotation every 10s ---
+    let currentAd = 1;
+    setInterval(() => {
+      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
+      currentAd = currentAd === 1 ? 2 : 1;
+      document.getElementById(`ad${currentAd}`).classList.add('active');
+    }, 10000);
+
+    // --- Auto-hide after 30s, re-show on hover ---
+    let hideTimeout;
+    function startAutoHide() {
+      clearTimeout(hideTimeout);
+      hideTimeout = setTimeout(() => {
+        document.getElementById('adBox').classList.add('hidden');
+      }, 30000);
+    }
+    function showAdBox() {
+      clearTimeout(hideTimeout);
+      document.getElementById('adBox').classList.remove('hidden');
+    }
+    startAutoHide();
+
+    // --- Make adBox draggable ---
+    (function() {
+      const box = document.getElementById('adBox');
+      let offsetX, offsetY, dragging = false;
+      box.addEventListener('mousedown', e => {
+        dragging = true;
+        offsetX = e.clientX - box.offsetLeft;
+        offsetY = e.clientY - box.offsetTop;
+        document.body.style.userSelect = 'none';
+      });
+      document.addEventListener('mousemove', e => {
+        if (!dragging) return;
+        box.style.left = `${e.clientX - offsetX}px`;
+        box.style.top = `${e.clientY - offsetY}px`;
+        box.style.bottom = 'auto';
+        box.style.right  = 'auto';
+      });
+      document.addEventListener('mouseup', () => {
+        dragging = false;
+        document.body.style.userSelect = '';
+      });
+    })();
+
+    // --- Close button handler ---
+    document.getElementById('closeAd').addEventListener('click', () => {
+      document.getElementById('adBox').style.display = 'none';
+    });
   </script>
+
 </body>
 </html>
