--- a/anime/Tokyo Revengers season 1.html
+++ b/anime/Tokyo Revengers season 1.html
@@ -1,4 +1,3 @@
-<!-- anime/tokyo-revengers.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tokyo Revengers Season 1</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    #adBox {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 90vw;
+      max-width: 728px;
+      background-color: #374151;
+      padding: 12px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+      z-index: 1000;
+      cursor: move;
+      transition: opacity 0.5s ease;
+    }
+    #adBox.hidden { opacity: 0; pointer-events: none; }
+    .ad-slot { display: none; }
+    .ad-slot.active { display: block; }
+    #closeAd {
+      position: absolute;
+      top: 6px;
+      right: 8px;
+      background: transparent;
+      border: none;
+      color: white;
+      font-size: 1.25rem;
+      line-height: 1;
+      cursor: pointer;
+    }
+    @media (max-width: 640px) {
+      #adBox { bottom: 1rem; right: 1rem; }
+    }
+  </style>
 </head>
 <body class="bg-black text-white font-mono">
+
   <div class="p-6">
     <h1 class="text-4xl font-bold text-pink-600">Tokyo Revengers Season 1</h1>
     <p class="text-gray-400 mb-6">Tokyo Revengers Season 1 in Hindi</p>
@@ -26,7 +59,36 @@
     <div id="episodeList" class="space-y-3"></div>
   </div>
 
+  <!-- Ad Box -->
+  <div id="adBox" onmouseenter="showAdBox()" onmouseleave="startAutoHide()">
+    <button id="closeAd" aria-label="Close ad">×</button>
+    <div class="ad-slot active" id="ad1">
+      <iframe
+        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
+        width="100%"
+        height="90"
+        frameborder="0"
+        scrolling="no"
+        allowfullscreen>
+      </iframe>
+    </div>
+    <div class="ad-slot" id="ad2">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '38c97041ba09133421880a5339a162a8',
+          'format': 'iframe',
+          'height': 90,
+          'width': 728,
+          'params': {}
+        };
+      </script>
+      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+    </div>
+  </div>
+
   <script type="text/javascript">
+    window.onbeforeunload = null; // remove "leave site?" prompt
+
     const episodes = [
       {
         title: "Tokyo Revengers season 1 episode 1",
@@ -66,7 +128,7 @@
       },
       {
         title: "Tokyo Revengers season 1 episode 7",
-        link: "https://drive.google.com/file/d/1yDeN6__2_JMo1I4aG-op_Zj4BQvGxX-q/preview", <!-- replaced with a different link -->
+        link: "https://drive.google.com/file/d/1yDeN6__2_JMo1I4aG-op_Zj4BQvGxX-q/preview",
         description: "Tokyo Revengers season 1 episode 7.",
         uploadDate: "2025-04-25"
       },
@@ -119,6 +181,56 @@
         date.innerText = "Uploaded: " + ep.uploadDate;
       };
       list.appendChild(btn);
+    });
+
+    // Rotate ads
+    let currentAd = 1;
+    setInterval(() => {
+      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
+      currentAd = currentAd === 1 ? 2 : 1;
+      document.getElementById(`ad${currentAd}`).classList.add('active');
+    }, 10000);
+
+    // Auto-hide ads
+    let hideTimeout;
+    function startAutoHide() {
+      clearTimeout(hideTimeout);
+      hideTimeout = setTimeout(() => {
+        document.getElementById('adBox').classList.add('hidden');
+      }, 30000);
+    }
+    function showAdBox() {
+      clearTimeout(hideTimeout);
+      document.getElementById('adBox').classList.remove('hidden');
+    }
+    startAutoHide();
+
+    // Draggable
+    (function() {
+      const box = document.getElementById('adBox');
+      let offsetX, offsetY, dragging = false;
+      box.addEventListener('mousedown', e => {
+        dragging = true;
+        offsetX = e.clientX - box.offsetLeft;
+        offsetY = e.clientY - box.offsetTop;
+        document.body.style.userSelect = 'none';
+      });
+      document.addEventListener('mousemove', e => {
+        if (!dragging) return;
+        box.style.left = `${e.clientX - offsetX}px`;
+        box.style.top = `${e.clientY - offsetY}px`;
+        box.style.bottom = 'auto';
+        box.style.right  = 'auto';
+      });
+      document.addEventListener('mouseup', () => {
+        dragging = false;
+        document.body.style.userSelect = '';
+      });
+    })();
+
+    // Close ad
+    document.getElementById('closeAd').addEventListener('click', () => {
+      document.getElementById('adBox').style.display = 'none';
     });
   </script>
 </body>
