--- a/anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html
+++ b/anime/anime/Shinchan The Legend of Ninja Mononoke (Hindi).html
@@ -1,4 +1,3 @@
-<!-- anime/dragon-ball.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shinchan The Legend of Ninja Mononoke (Hindi)</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Ad box styling */
+    #adBox {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: rgba(30, 30, 30, 0.95);
+      border: 2px solid #f472b6;
+      border-radius: 1rem;
+      padding: 16px;
+      box-shadow: 0 0 20px rgba(255, 105, 180, 0.5);
+      z-index: 9999;
+      width: 300px;
+      cursor: move;
+    }
+    #closeAd {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      cursor: pointer;
+      color: #f472b6;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body class="bg-black text-white font-mono">
+
   <div class="p-6">
     <h1 class="text-4xl font-bold text-pink-600">Shinchan The Legend of Ninja Mononoke (Hindi)</h1>
     <p class="text-gray-400 mb-6">Shinchan The Legend of Ninja Mononoke (Hindi)</p>
@@ -28,6 +52,15 @@
     </div>
   </div>
 
+  <!-- Ad Box -->
+  <div id="adBox">
+    <div id="closeAd" onclick="document.getElementById('adBox').style.display='none'">✖</div>
+    <a href="https://your-ad-link.com" target="_blank">
+      <img src="https://via.placeholder.com/280x150.png?text=Your+Ad+Here" alt="Ad Banner" class="rounded-lg">
+    </a>
+    <p class="text-sm text-center mt-2 text-pink-400">Sponsored Ad</p>
+  </div>
+
   <script>
     const episodes = [
       {
@@ -45,7 +78,7 @@
     const desc = document.getElementById('episodeDesc');
     const date = document.getElementById('uploadDate');
 
-    episodes.forEach((ep, idx) => {
+    episodes.forEach((ep) => {
       const btn = document.createElement('button');
       btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
       btn.innerText = ep.title;
@@ -57,6 +90,34 @@
       };
       list.appendChild(btn);
     });
+
+    // Make ad draggable
+    const adBox = document.getElementById('adBox');
+    adBox.onmousedown = function(event) {
+      let shiftX = event.clientX - adBox.getBoundingClientRect().left;
+      let shiftY = event.clientY - adBox.getBoundingClientRect().top;
+
+      function moveAt(pageX, pageY) {
+        adBox.style.left = pageX - shiftX + 'px';
+        adBox.style.top = pageY - shiftY + 'px';
+      }
+
+      function onMouseMove(event) {
+        moveAt(event.pageX, event.pageY);
+      }
+
+      document.addEventListener('mousemove', onMouseMove);
+
+      adBox.onmouseup = function() {
+        document.removeEventListener('mousemove', onMouseMove);
+        adBox.onmouseup = null;
+      };
+    };
+
+    adBox.ondragstart = function() {
+      return false;
+    };
   </script>
+
 </body>
 </html>
