--- a/movies/index.html
+++ b/movies/index.html
@@ -100,8 +100,8 @@
     // Movies Data
     const movieData = {
       "interstellar": {
-        title: "Interstellar (2014) Hindi Dubbed",
-        cover: "../movies/interstellar.jpg",
+        title: "Do-patti-(2024)-hindi-movie",
+        cover: "Do-patti-(2024)-hindi-movie.jpg",
         link: "interstellar.html"
       },
       "avengers-endgame": {
