--- a/movies/do pati.html
+++ b/movies/do pati.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dragon Ball Movie</title>
+  <title>Do-patti-(2024)-hindi-movie</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* Ad box styles */
@@ -43,15 +43,15 @@
 <body class="bg-black text-white font-mono">
 
   <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Dragon Ball Movie</h1>
-    <p class="text-gray-400 mb-6">All episodes of the Dragon Ball Movie</p>
+    <h1 class="text-4xl font-bold text-pink-600">Do-patti-(2024)-hindi-movie</h1>
+    <p class="text-gray-400 mb-6">Do-patti-(2024)-hindi-movie</p>
 
     <!-- Video Player -->
     <div class="mb-4">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1CCs06Ok3qo6k9B-SmgCeJS5950ZsUOot/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Dragon Ball Movie - Google Drive</h2>
-        <p id="episodeDesc" class="text-gray-400">Dragon Ball full movie hosted on Google Drive.</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">Do-patti-(2024)-hindi-movie</h2>
+        <p id="episodeDesc" class="text-gray-400">Do-patti-(2024)-hindi-movie</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -96,9 +96,9 @@
     // --- Episodes loading ---
     const episodes = [
       {
-        title: "Dragon Ball Movie - Google Drive",
-        link: "https://drive.google.com/file/d/1CCs06Ok3qo6k9B-SmgCeJS5950ZsUOot/preview",
-        description: "Dragon Ball full movie hosted on Google Drive.",
+        title: "Do-patti-(2024)-hindi-movie",
+        link: "https://drive.google.com/file/d/1um6zVCXO95JjbYul1yIVS7E1idTTQI04/preview",
+        description: "Do-patti-(2024)-hindi-movie.",
         uploadDate: "2025-04-25"
       }
       // You can add more episodes here
