--- a/movies/index.html
+++ b/movies/index.html
@@ -99,10 +99,10 @@
 
     // Movies Data
     const movieData = {
-      "interstellar": {
+      "Do-patti-(2024)-hindi-movie": {
         title: "Do-patti-(2024)-hindi-movie",
         cover: "Do-patti-(2024)-hindi-movie.jpg",
-        link: "interstellar.html"
+        link: "movies/do pati.html"
       },
       "avengers-endgame": {
         title: "Avengers: Endgame (2019) Hindi Dubbed",
