--- a/movies/index.html
+++ b/movies/index.html
@@ -91,7 +91,7 @@
     window.onbeforeunload = null;
 
     const carouselData = [
-      { title: "Movie Cover 1", image: "../unnamed (3).jpg" },
+      { title: "Movie Cover 1", image: "../Do-patti-(2024)-hindi-movie.jpg" },
       { title: "Movie Cover 2", image: "../unnamed (2).jpg" },
       { title: "Movie Cover 3", image: "../unnamed (4).jpg" },
       { title: "Movie Cover 4", image: "../unnamed (1).jpg" },
