--- a/movies/index.html
+++ b/movies/index.html
@@ -102,7 +102,7 @@
       "Do-patti-(2024)-hindi-movie": {
         title: "Do-patti-(2024)-hindi-movie",
         cover: "Do-patti-(2024)-hindi-movie.jpg",
-        link: "movies/do pati.html"
+        link: "anime/Tokyo Revengers season 1.html"
       },
       "avengers-endgame": {
         title: "Avengers: Endgame (2019) Hindi Dubbed",
